# LLM-Stuff

./: README.md
agents/: README.md
agents/tool_testing/: Modelfile  README.md  main.py  pyproject.toml
agents/unit_test/: .gitignore  README.md  requirements.txt
agents/unit_test/src/agent/: _core.py  _graph.py  mock.py  tools.py
agents/unit_test/tests/: __main__.py  test_df_tools.py
fine_tuning/dpo/: .gitignore  README.md  main.py  requirements.txt  train.jsonl
rag/eval/: .gitignore  README.md  eval_wixqa.py  metrics.py  print_examples.py  pyproject.toml  retrievers.py
rag/rag_datapizza/: .gitignore  README.md  main.py  ping_model.py  pyproject.toml  rag_nopipeline.py
rag/secure_bert2_0/: README.md  main.py  pyproject.toml
