[project]
name = "rag-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "numpy>=2.3.3",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
]
